cmake_minimum_required(VERSION 2.8)
project(samples)
set(CMAKE_VERBOSE_MAKEFILE ON)
add_subdirectory(base64)
add_subdirectory(cache)
add_subdirectory(file)
add_subdirectory(ipc_msgq)
add_subdirectory(md5)
add_subdirectory(string_op)
add_subdirectory(timestamp)
add_subdirectory(util)
add_subdirectory(watchdog_coredump)
