cmake_minimum_required(VERSION 2.8)
set(CMAKE_VERBOSE_MAKEFILE ON)
include_directories(/usr/local/include)
add_compile_options(-g -Wall -fpermissive -std=c++11)
include_directories(/usr/local/ssl/include)
link_directories(/usr/local/ssl/lib)
add_executable(md5_demo md5_demo.cpp)
target_link_libraries(md5_demo libssl.a libcrypto.a)